k8s/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: <your-dockerhub-username>/notification-service:latest
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - port: 3003
      targetPort: 3003
