k8s/processing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processing-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processing-service
  template:
    metadata:
      labels:
        app: processing-service
    spec:
      containers:
        - name: processing-service
          image: ghada477/processing-service:latest
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: processing-service
spec:
  type: ClusterIP
  selector:
    app: processing-service
  ports:
    - port: 3001
      targetPort: 3001
