k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3000
          - path: /process
            pathType: Prefix
            backend:
              service:
                name: processing-service
                port:
                  number: 3001
          - path: /notify
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 3003
